# EndoscopeAi

./: .gitignore  CHANGELOG.md  CI-CD-README.md  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml  start_stt_server.bat  test_websocket.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  technical_task.yml  user_story.yml
.github/workflows/: flutter-ci.yml  flutter_ci.yml
docs/: deployment_view.mmd  dynamic_view.mmd  git-worflow.mmd  static_view.mmd
docs/architecture/: architecture.md
docs/automation/: continuous-delivery.md  continuous-integration.md
docs/quality-assurance/: automated-tests.md  quality-attribute-scenarios.md  user-acceptance-tests.md
lib/: app.dart  backButton.dart  customButton.dart  fileChoser.dart  fileVideoApp.dart  homePage.dart  indention.dart  main.dart  recordingsApp.dart  routes.dart  streamApp.dart  stt.dart
lib/backend/: README.md  python_service.dart
lib/features/: record_data.dart
lib/pages/: file_video_page.dart  home_page.dart  (+3 more)
python/: README.md  stt_stream.py  whisper_server.py
python_backend/: README.md  endoscope_ai.py  requirements.txt
python_stt_server/: README.md  config.py  requirements.txt  switch_model.py  whisper_server.py
rust/: Cargo.toml
rust/lib/yolo_bridge.dart/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
rust/src/: generated.rs  lib.rs
rust/src/yolo/: endo_yolo.rs  flutter_yolo.rs  mod.rs
test/: failing_test.dart  markers_model_test.dart  string_test.dart  timecode_sync_test.dart  timecode_test.dart
(+80 files in other folders)
