[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ort = "2.0.0-rc.10"
ndarray = "0.16.1"
flutter_rust_bridge_codegen = "2.10.0"
flutter_rust_bridge = "=2.10.0"
image = "0.25.6"
raqote = "0.8.5"
tracing-subscriber = "0.3.19"
eframe = "0.31.1"
egui = "0.31.1"
anyhow = "1.0.98"
